Drafting methods, data, results, BID WP

--- a/refs.bib
+++ b/refs.bib
@@ -217,6 +217,14 @@ DOI = {10.1257/aer.20181169},
   publisher={Princeton University Press}
 }
 
+
+@book{UNICEF2021,
+  title={{The Climate Crisis is a Child Rights Crisis: Introducing the Children's Climate Risk Index}},
+  author={{UNICEF}},
+  year={2021},
+  publisher={United Nations Children's Fund, New York}
+}
+
 @InCollection{Waldron1983,
   author={Waldron, I.},
   title={The Role of Genetic and Biological Factors in Sex Differences in Mortality},
@@ -2896,6 +2904,22 @@ note={unpublished manuscript}
   publisher={Elsevier}
 }
 
+@article{CameronMiller2015,
+	author = {A. Colin Cameron and Douglas L. Miller},
+	title = {{A Practitioner's Guide to Cluster-Robust Inference}},
+	volume = {50},
+	number = {2},
+	pages = {317--372},
+	year = {2015},
+	doi = {10.3368/jhr.50.2.317},
+	publisher = {University of Wisconsin Press},
+	abstract = {We consider statistical inference for regression when data are grouped into clusters, with regression model errors independent across clusters but correlated within clusters. Examples include data on individuals with clustering on village or region or other category such as industry, and state-year differences-in-differences studies with clustering on state. In such settings, default standard errors can greatly overstate estimator precision. Instead, if the number of clusters is large, statistical inference after OLS should be based on cluster-robust standard errors. We outline the basic method as well as many complications that can arise in practice. These include cluster-specific fixed effects, few clusters, multiway clustering, and estimators other than OLS.},
+	issn = {0022-166X},
+	URL = {https://jhr.uwpress.org/content/50/2/317},
+	eprint = {https://jhr.uwpress.org/content/50/2/317.full.pdf},
+	journal = {Journal of Human Resources}
+}
+
 @article{rocha2022winds,
   title={Winds of fire and smoke: Air pollution and health in the Brazilian Amazon},
   author={Rocha, Rudi and Sant'Anna, Andr{\'e} Albuquerque},
@@ -2906,9 +2930,9 @@ note={unpublished manuscript}
   publisher={Elsevier}
 }
 
-@article{zivin2020unintended,
-  title={The unintended impacts of agricultural fires: Human capital in China},
-  author={Zivin, Joshua Graff and Liu, Tong and Song, Yingquan and Tang, Qu and Zhang, Peng},
+@article{graffzivin2020unintended,
+  title={{The unintended impacts of agricultural fires: Human capital in China}},
+  author={Graff Zivin, Joshua and Liu, Tong and Song, Yingquan and Tang, Qu and Zhang, Peng},
   journal={Journal of Development Economics},
   volume={147},
   pages={102560},
@@ -2950,7 +2974,7 @@ note={unpublished manuscript}
 }
 
 @article{borgschulte2022air,
-  title={Air pollution and the labor market: Evidence from wildfire smoke},
+  title={{Air pollution and the labor market: Evidence from wildfire smoke}},
   author={Borgschulte, Mark and Molitor, David and Zou, Eric},
   year={Forthtcoming},
    journal={Review of Economics and Statistics}
@@ -3040,9 +3064,9 @@ note={unpublished manuscript}
 }
 
 @article{westerling2006warming,
-	title={Warming and earlier spring increase western US forest wildfire activity},
+	title={{Warming and earlier spring increase western US forest wildfire activity}},
 	author={Westerling, Anthony L and Hidalgo, Hugo G and Cayan, Daniel R and Swetnam, Thomas W},
-	journal={science},
+	journal={Science},
 	volume={313},
 	number={5789},
 	pages={940--943},
@@ -3296,4 +3320,210 @@ note={mimeo}
   publisher={SciELO Argentina}
 }
 
+@article{duarte2022fire,
+  title={Fire-Pollutant-Atmosphere Components and Its Impact on Mortality in Portugal During Wildfire Seasons},
+  author={Duarte, Edicl{\^e} de Souza Fernandes and Costa, Maria Joao and Salgueiro, Vanda and Lucio, Paulo S{\'e}rgio and Potes, Miguel and Bortoli, Daniele and Salgado, Rui},
+  journal={Authorea Preprints},
+  year={2022},
+  publisher={Authorea}
+}
 
+@article{tarin2021impact,
+  title={Impact of large wildfires on PM 10 levels and human mortality in Portugal},
+  author={Tar{\'\i}n-Carrasco, Patricia and Augusto, Sofia and Palacios-Pe{\~n}a, Laura and Ratola, Nuno and Jim{\'e}nez-Guerrero, Pedro},
+  journal={Natural Hazards and Earth System Sciences},
+  volume={21},
+  number={9},
+  pages={2867--2880},
+  year={2021},
+  publisher={Copernicus GmbH}
+}
+
+@article{augusto2020population,
+  title={Population exposure to particulate-matter and related mortality due to the Portuguese wildfires in October 2017 driven by storm Ophelia},
+  author={Augusto, Sofia and Ratola, Nuno and Tar{\'\i}n-Carrasco, Patricia and Jim{\'e}nez-Guerrero, Pedro and Turco, Marco and Schuhmacher, Marta and Costa, Solange and Teixeira, JP and Costa, Carla},
+  journal={Environment International},
+  volume={144},
+  pages={106056},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{slezakova2013forest,
+  title={Forest fires in Northern region of Portugal: Impact on PM levels},
+  author={Slezakova, Klara and Morais, Simone and do Carmo Pereira, Maria},
+  journal={Atmospheric research},
+  volume={127},
+  pages={148--153},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{brito2021quantitative,
+  title={Quantitative analysis of air pollution and mortality in Portugal: Current trends and links following proposed biological pathways},
+  author={Brito, Jos{\'e} and Bernardo, Alexandra and Zagalo, Carlos and Gon{\c{c}}alves, Lu{\'\i}sa Lima},
+  journal={Science of the Total Environment},
+  volume={755},
+  pages={142473},
+  year={2021},
+  publisher={Elsevier}
+}
+
+@article{barbosa2022health,
+  title={Health and economic burden of the 2017 Portuguese extreme wildland fires on children},
+  author={Barbosa, Joana V and Nunes, Rafael AO and Alvim-Ferraz, Maria CM and Martins, Fernando G and Sousa, Sofia IV},
+  journal={International journal of environmental research and public health},
+  volume={19},
+  number={1},
+  pages={593},
+  year={2022},
+  publisher={MDPI}
+}
+
+@article{de2018megafires,
+  title={Megafires in Chile 2017: Monitoring multiscale environmental impacts of burned ecosystems},
+  author={De la Barrera, Francisco and Barraza, Francisco and Favier, Philom{\`e}ne and Ruiz, Vannia and Quense, Jorge},
+  journal={Science of the total environment},
+  volume={637},
+  pages={1526--1536},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@article{leone2023wildfires,
+  title={Wildfires Impact Assessment on PM Levels Using Generalized Additive Mixed Models},
+  author={Leone, Gianluca and Cattani, Giorgio and Cusano, Mariacarmela and Gaeta, Alessandra and Pellis, Guido and Vitullo, Marina and Morelli, Raffaele},
+  journal={Atmosphere},
+  volume={14},
+  number={2},
+  pages={231},
+  year={2023},
+  publisher={MDPI}
+}
+
+@article{lapere20212017,
+  title={The 2017 mega-fires in central chile: Impacts on regional atmospheric composition and meteorology assessed from satellite data and chemistry-transport modeling},
+  author={Lapere, R{\'e}my and Mailler, Sylvain and Menut, Laurent},
+  journal={Atmosphere},
+  volume={12},
+  number={3},
+  pages={344},
+  year={2021},
+  publisher={MDPI}
+}
+
+@article{ciciretti2022relationship,
+  title={Relationship between wildfire smoke and children’s respiratory health in the metropolitan cities of Central-Chile},
+  author={Ciciretti, Rebecca and Barraza, Francisco and De la Barrera, Francisco and Urquieta, Lorna and Cortes, Sandra},
+  journal={Atmosphere},
+  volume={13},
+  number={1},
+  pages={58},
+  year={2022},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{resnick2015health,
+  title={Health outcomes associated with smoke exposure in Albuquerque, New Mexico, during the 2011 Wallow fire},
+  author={Resnick, Adam and Woods, Brian and Krapfl, Heidi and Toth, Barbara},
+  journal={Journal of public health management and practice},
+  volume={21},
+  pages={S55--S61},
+  year={2015},
+  publisher={JSTOR}
+}
+
+@article{OgasawaraYumitori2019,
+title = {{Early-life exposure to weather shocks and child height: Evidence from industrializing Japan}},
+journal = {SSM - Population Health},
+volume = {7},
+pages = {100317},
+year = {2019},
+issn = {2352-8273},
+doi = {https://doi.org/10.1016/j.ssmph.2018.11.001},
+url = {https://www.sciencedirect.com/science/article/pii/S2352827318301241},
+author = {Kota Ogasawara and Minami Yumitori},
+keywords = {Child height, Climate change, Fetal origins, Long-run effect, Weather shocks},
+abstract = {In this study, we estimate the long-run effects of early-life exposure to weather shocks on the height of primary school children. To estimate the global impacts on almost the entire child population in an industrializing country, we utilize both a unique nationwide multi-dimensional longitudinal dataset of Japanese children aged 6–11 and official monthly statistics on meteorological conditions in the 1920s. We observe that the exposure to cold waves in early-life exerted stunting effects on both the boys and girls. In the coldest regions in the northeastern area of Japan, the stunting effects of cold weather shocks on the boys and girls are estimated to be approximately 0.8 and 0.6 cm, respectively. Our observation indicates that prenatal (postnatal) exposure is important for the boys (girls). Our results suggest that the marginal effects of cold waves are stronger in the warmer regions than in the colder regions.}
+}
+
+@article{Almondetal2018,
+Author = {Almond, Douglas and Currie, Janet and Duque, Valentina},
+Title = {Childhood Circumstances and Adult Outcomes: Act II},
+Journal = {Journal of Economic Literature},
+Volume = {56},
+Number = {4},
+Year = {2018},
+Month = {December},
+Pages = {1360-1446},
+DOI = {10.1257/jel.20171164},
+URL = {https://www.aeaweb.org/articles?id=10.1257/jel.20171164}}
+
+@article{morello2023hospitalization,
+  title={Hospitalization due to fire-induced pollution in the Brazilian Amazon: A causal inference analysis with an assessment of policy trade-offs},
+  author={Morello, Thiago Fonseca},
+  journal={World Development},
+  volume={161},
+  pages={106123},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{zu2016long,
+  title={Long-range fine particulate matter from the 2002 Quebec forest fires and daily mortality in Greater Boston and New York City},
+  author={Zu, Ke and Tao, Ge and Long, Christopher and Goodman, Julie and Valberg, Peter},
+  journal={Air Quality, Atmosphere \& Health},
+  volume={9},
+  pages={213--221},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{kollanus2017mortality,
+  title={Mortality due to vegetation fire--originated PM2. 5 exposure in Europe—assessment for the years 2005 and 2008},
+  author={Kollanus, Virpi and Prank, Marje and Gens, Alexandra and Soares, Joana and Vira, Julius and Kukkonen, Jaakko and Sofiev, Mikhail and Salonen, Raimo O and Lanki, Timo},
+  journal={Environmental health perspectives},
+  volume={125},
+  number={1},
+  pages={30--37},
+  year={2017},
+  publisher={National Institute of Environmental Health Sciences}
+}
+
+@article{moeltner2013wildfire,
+  title={Wildfire smoke and health impacts: A closer look at fire attributes and their marginal effects},
+  author={Moeltner, Klaus and Kim, M-K and Zhu, Erqian and Yang, Wei},
+  journal={Journal of Environmental Economics and Management},
+  volume={66},
+  number={3},
+  pages={476--496},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@article{Fulleretal2022,
+  title={Pollution and health: a progress update},
+  author={Fuller, Richard and Landrigan, Philip J and Balakrishnan, Kalpana and Bathan, Glynda and Bose-O'Reilly, Stephan and Brauer, Michael and Caravanos, Jack and Chiles, Tom and Cohen, Aaron and Corra, Lilian and Cropper, Maureen and Ferraro, Greg and Hanna, Jill and Hanrahan, David and Hu, Howard and Hunter, David and Janata, Gloria and Kupka, Rachael and Lanphear, Bruce and Lichtveld, Maureen and Martin, Keith and Mustapha, Adetoun and Sanchez-Triana, Ernesto and Sandilya, Karti and Schaefli, Laura and Shaw, Joseph and Seddon, Jessica and Suk, William and T{\'e}llez-Rojo, Martha Mar{\'i}a and Yan, Chonghuai},
+  journal={The Lancet Planetary Health},
+  volume={6},
+  number={6},
+  pages={e535--e547},
+  year={2022},
+  publisher={Elsevier},
+  doi={10.1016/S2542-5196(22)00090-0},
+  issn={2542-5196},
+  url={https://doi.org/10.1016/S2542-5196(22)00090-0}
+}
+
+@article{Russetal2021,
+  title={{Life Course Air Pollution Exposure and Cognitive Decline: Modelled Historical Air Pollution Data and the Lothian Birth Cohort 1936}},
+  author={Russ, Tom C and Cherrie, Mark P C and Dibben, Chris and Tomlinson, Sam and Reis, Stefan and Dragosits, Ulrike and Vieno, Massimo and Beck, Rachel and Carnell, Elizabeth and Shortt, Niamh K and Muniz-Terrera, Graciela and Redmond, Paul and Taylor, Anne M and Clemens, Tom and van Tongeren, Martie and Agius, Raymond M and Starr, John M and Deary, Ian J and Pearce, Jamie R},
+  journal={Journal of Alzheimer's Disease},
+  volume={79},
+  number={3},
+  pages={1063--1074},
+  year={2021},
+  doi={10.3233/JAD-200910},
+  PMID={33427734},
+  PMCID={PMC7990442}
+}
